<package format="3">
  <name>gbeam2_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lo.petulicchio@gmail.com">lor</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>gbeam2_library</depend>
  <depend>gbeam2_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
